--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,35 @@ body {
   text-transform: uppercase;
 }
 
+section {
+  position: relative;
+  padding: 60px 0px;
+}
+
+.text_stroke {
+  color: transparent;
+  -webkit-text-stroke: 1.5px #3e424b;
+}
+
+.button {
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 2.1px;
+  color: #3e424b;
+  border: 2px solid #3e424b;
+  padding: 16px;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+.button:hover {
+  color: #3e424b;
+}
+
+.slick-slide {
+  outline: none;
+}
+
 /* ?? part start */
 header {
   background-color: #fff;
@@ -128,16 +157,18 @@ header .container .head_content .menu.active .m_bar li:first-child {
 }
 
 .menu_content {
-  display: none;
+  pointer-events: none;
+  height: 0;
   position: relative;
   -webkit-clip-path: circle(100px at 120% -10%);
           clip-path: circle(100px at 120% -10%);
   -webkit-transition: all 1.2s ease-in-out;
   transition: all 1.2s ease-in-out;
+  overflow: hidden;
 }
 
 .menu_content.open {
-  display: block;
+  height: 100%;
   pointer-events: all;
   -webkit-clip-path: circle(2500px at 0% -10%);
           clip-path: circle(2500px at 0% -10%);
@@ -230,7 +261,6 @@ header .container .head_content .menu.active .m_bar li:first-child {
 }
 
 .menu_content .bottom .container .social_links li {
-  margin: 0px 45px;
   padding: 16px;
   -webkit-transform: translateY(0);
           transform: translateY(0);
@@ -267,4 +297,162 @@ header .container .head_content .menu.active .m_bar li:first-child {
   display: none;
 }
 
+/* Banner section start */
+#banner {
+  overflow: hidden;
+  padding-top: 178px;
+  padding-bottom: 242px;
+}
+
+#banner .container .banner_wrapper h2 {
+  font-size: 84px;
+  line-height: 110px;
+  text-transform: uppercase;
+  font-family: 'Oswald', sans-serif;
+}
+
+#banner .container .banner_wrapper p {
+  font-size: 16px;
+  line-height: 38px;
+  color: #3e424b;
+  padding-right: 150px;
+  margin: 48px 0px 40px 0px;
+}
+
+/* Banner section end */
+#work {
+  background-color: #f8f8f8;
+}
+
+#work .container .section_title h2 {
+  -webkit-text-stroke-color: #7a849a;
+}
+
+#work .container .project_slider .slide_item {
+  margin: 0;
+  padding: 0;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-transition: all 0.6s linear;
+  transition: all 0.6s linear;
+}
+
+#work .container .project_slider .slide_item.slick-slide {
+  opacity: 0.2;
+  pointer-events: none;
+}
+
+#work .container .project_slider .slide_item.slick-current {
+  opacity: 1;
+  pointer-events: all;
+}
+
+/* WE_DO part start */
+#WE_Do .container .box_wrapper {
+  position: relative;
+  max-width: 570px;
+  height: 435px;
+}
+
+#WE_Do .container .box_wrapper .card_box {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+  -webkit-transition: all 1.2s ease;
+  transition: all 1.2s ease;
+  border: 1.5px solid #3e424b;
+}
+
+#WE_Do .container .box_wrapper .card_box .front_part {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#WE_Do .container .box_wrapper .card_box .front_part h2 {
+  font-size: 84px;
+  line-height: 110px;
+  text-align: center;
+  font-family: 'Oswald', sans-serif;
+  text-transform: uppercase;
+}
+
+#WE_Do .container .box_wrapper .card_box .back_part {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+  background: #3e424b;
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#WE_Do .container .box_wrapper .card_box .back_part .box_title {
+  padding: 50px;
+}
+
+#WE_Do .container .box_wrapper .card_box .back_part .box_title h2 {
+  font-size: 46px;
+  line-height: 55px;
+  text-transform: uppercase;
+  color: #fff;
+  font-family: 'Oswald', sans-serif;
+  margin-bottom: 32px;
+}
+
+#WE_Do .container .box_wrapper .card_box .back_part .box_title p {
+  font-size: 16px;
+  line-height: 38px;
+  color: #7a849a;
+  margin-bottom: 40px;
+}
+
+#WE_Do .container .box_wrapper .card_box .back_part .box_title a {
+  font-size: 12px;
+  line-height: 14px;
+  text-transform: uppercase;
+  color: #fff;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 600;
+}
+
+#WE_Do .container .box_wrapper .card_box:hover {
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
+  border: transparent;
+}
+
+#WE_Do .container .mb-30 {
+  margin-bottom: 30px;
+}
+
+/* WE_DO part end */
+/* brand_area part start */
+#brand_area .container .brand_slider .single_brand img {
+  margin: auto;
+}
+
+/* brand_area part end */
+/* ?? part start */
 /* ?? part end */
