--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -4,4 +4,122 @@
 /* ?? part start */
 @import './header';
 @import './banner';
+@import './work';
+
+/* WE_DO part start */
+#WE_Do {
+  .container {
+    .box_wrapper {
+      position: relative;
+      max-width: 570px;
+      height: 435px;
+      .card_box {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        transform-style: preserve-3d;
+        transition: all 1.2s ease;
+        border: 1.5px solid #3e424b;
+
+        .front_part {
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          backface-visibility: hidden;
+          display: flex;
+          align-items: center;
+          h2 {
+            font-size: 84px;
+            line-height: 110px;
+            text-align: center;
+            font-family: 'Oswald', sans-serif;
+            text-transform: uppercase;
+          }
+        }
+        .back_part {
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          backface-visibility: hidden;
+          background: #3e424b;
+          transform: rotateY(180deg);
+          display: flex;
+          align-items: center;
+          .box_title {
+            padding: 50px;
+            h2 {
+              font-size: 46px;
+              line-height: 55px;
+              text-transform: uppercase;
+              color: #fff;
+              font-family: 'Oswald', sans-serif;
+              margin-bottom: 32px;
+            }
+            p {
+              font-size: 16px;
+              line-height: 38px;
+              color: #7a849a;
+              margin-bottom: 40px;
+            }
+            a {
+              font-size: 12px;
+              line-height: 14px;
+              text-transform: uppercase;
+              color: #fff;
+              font-family: 'Poppins', sans-serif;
+              font-weight: 600;
+            }
+          }
+        }
+        &:hover {
+          transform: rotateY(180deg);
+          border: transparent;
+        }
+      }
+      //   .box_head {
+      //     h2 {
+      //       font-size: 84px;
+      //       line-height: 110px;
+      //       text-align: center;
+      //       font-family: 'Oswald', sans-serif;
+      //       text-transform: uppercase;
+      //     }
+      //   }
+      //   .box_overlay {
+      //     visibility: hidden;
+      //     pointer-events: none;
+      //     height: 0;
+      //   }
+      //   &:hover {
+      //     .box_overlay {
+      //       visibility: visible;
+      //       height: 100%;
+      //     }
+      //   }
+    }
+
+    .mb-30 {
+      margin-bottom: 30px;
+      @media (max-width: 1024px) {
+      }
+    }
+  }
+}
+/* WE_DO part end */
+
+/* brand_area part start */
+#brand_area {
+  .container {
+    .brand_slider {
+      .single_brand {
+        img {
+          margin: auto;
+        }
+      }
+    }
+  }
+}
+/* brand_area part end */
+
+/* ?? part start */
 /* ?? part end */
