--- a/assets/scss/_work.scss
+++ b/assets/scss/_work.scss
@@ -68,6 +68,11 @@
       }
     }
   }
+  .project_img{
+    img{
+      max-width: 100%;
+    }
+  }
   .project_info{
     span{
       font-size: 12px;
