--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -7,6 +7,7 @@
 @import 'work';
 @import 'about';
 @import '404';
+@import 'testimonial';
 
 /* WE_DO part start */
 #WE_Do {
@@ -131,9 +132,7 @@
     }
   }
 }
-img{
-  max-width: 100%;
-}
+
 .mb-30{
   margin-bottom: 30px;
 }
